1.largest rectangle in histogram 2.max tree